docs/7.52/md/abapinsert_report.md
---
title: "INSERT REPORT"
description: |
  Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report_shortref.htm) Syntax INSERT REPORT prog FROM itab MAXIMUM WIDTH INTO wid  KEEPING DIRECTORY ENTRY   PROGRAM TYPE pt FIXED-POINT ARITHMETIC fp VERSION vs
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report.htm"
abapFile: "abapinsert_report.htm"
keywords: ["select", "insert", "loop", "do", "while", "if", "case", "try", "class", "data", "types", "abapinsert", "report"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [program editing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_editing.htm) →  [Dynamic Program Editing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_dynamic.htm) →  [ABAP Source Code](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_generic_program.htm) → 

INSERT REPORT

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report_shortref.htm)

Syntax

INSERT REPORT prog FROM itab
              *\[*MAXIMUM WIDTH INTO wid*\]*
              *{* *\[*KEEPING DIRECTORY ENTRY*\]*
              *|* *{* *\[*PROGRAM TYPE pt*\]*
                  *\[*FIXED-POINT ARITHMETIC fp*\]*
                  *\[*VERSION vs*\]* *}*
              *|* *\[*DIRECTORY ENTRY dir*\]* *}*.

Extras:

[1\. ... MAXIMUM WIDTH INTO wid](#!ABAP_ADDITION_1@1@)
[2\. ... KEEPING DIRECTORY ENTRY](#!ABAP_ADDITION_2@2@)
[3\. ... PROGRAM TYPE pt](#!ABAP_ADDITION_3@3@)
[4\. ... FIXED-POINT ARITHMETIC fp](#!ABAP_ADDITION_4@4@)
[5\. ... VERSION vs](#!ABAP_ADDITION_5@5@)
[6\. ... DIRECTORY ENTRY dir](#!ABAP_ADDITION_6@6@)

Effect

This statement passes the content of itab to the ABAP program specified in prog in the [repository](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrepository_glosry.htm "Glossary Entry") as source code. If a program with the specified name already exists, its source code is overwritten. Otherwise a new program with the name specified in prog and the source code from itab is created in the repository.

The additions for specifying the [program attributes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_attribute_glosry.htm "Glossary Entry") create the program attributes in the system table TRDIR.

If none of the additions are specified, the following default values are set when a new program is created:

-   The original language is set to the system language stored in the [profile parameter](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprofile_parameter_glosry.htm "Glossary Entry") zcsa/system\_language.
    
-   The creation date and the date of last change, along with the corresponding time, are set to the current values.
    
-   The program author last changed by attributes are set to the current user.
    
-   The program status is set to active by default. The program is compiled when it is first executed.
    
-   The program type is set to [executable program](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexecutable_program_glosry.htm "Glossary Entry").
    
-   The application is set to the value of the current program.
    
-   No [logical database](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogical_data_base_glosry.htm "Glossary Entry") is connected with the program.
    
-   Fixed point arithmetic is activated.
    
-   The setting for the [ABAP language version](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_version_glosry.htm "Glossary Entry") is taken from the current program.
    

If none of the additions are specified, an existing programs attributes remain intact if it is overwritten, but with the following exceptions:

-   The date and time of the last change are set to the current value.
    
-   The last changed by attribute is set to the current user.
    
-   The version number is increased by one.
    
-   The [ABAP language version](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_version_glosry.htm "Glossary Entry") is set as follows:
    

-   If the current program is from ABAP language version [Standard ABAP (Unicode)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenunicode_program_glosry.htm "Glossary Entry"), the overwritten program is always set to this language version.

-   The statement INSERT REPORT cannot currently be used in other ABAP language versions.

For itab, only a standard table without [secondary table keys](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensecondary_table_key_glosry.htm "Glossary Entry") is permitted. The row type of itab must be character-like. A source code line in itab can contain a maximum of 255 characters (if the row type has a fixed length, trailing blanks are ignored). prog must be a character-like flat data object, which can contain no more than 30 characters, and the content of which is not case-sensitive.

System Fields

sy-subrc

Meaning

0

The program specified in prog was successfully created or overwritten.

4

An error occurred when creating or overwriting the program specified in prog.

Security Note

If used wrongly, dynamic programming techniques can present a serious security risk. Any dynamic content that is passed to a program from the outside must be checked thoroughly or escaped before being used in dynamic statements. This can be done using the system class CL\_ABAP\_DYN\_PRG or the predefined function [escape](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenescape_functions.htm). See [ABAP Command Injections](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abengeneric_prog_scrty.htm).

Notes

-   The statement INSERT REPORT must be used with extreme caution, because it can completely overwrite existing programs without warning. Any inadvertent overwriting can be prevented by checking whether the specified name already exists in the NAME column of the system table TRDIR.
    
-   If INSERT REPORT is used to create a new program, this program is not assigned to a package, which means it is not connected to the [Change and Transport System (CTS)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencts_glosry.htm "Glossary Entry"). The program must either be assigned to a package in ABAP Workbench or it is only suitable for temporary tasks in the current system.
    
-   It is vital to have a precise working knowledge of the programs' structures and names if using the statement INSERT REPORT for programs organized in a [master program](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenframe_program_glosry.htm "Glossary Entry") and using [include programs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninclude_program_glosry.htm "Glossary Entry") (if created in ABAP Workbench).
    
-   The [program name](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_name_glosry.htm "Glossary Entry") that is created should comply with the naming conventions of [ABAP Workbench](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_workbench_glosry.htm "Glossary Entry") if it is to be processed using the tools in the workbench.
    
-   INSERT REPORT should be used in application programs in exceptional cases only. ABAP provides many other means of dynamic programming, which generally make creating source code dynamically unnecessary (see the list in [dynamic program processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_dynamic.htm)).
    

Addition 1

... MAXIMUM WIDTH INTO wid

Effect

If the addition MAXIMUM WIDTH is used, the number of characters of the longest source code line in itab is assigned to the variable wid, which must have data type i.

Addition 2

... KEEPING DIRECTORY ENTRY

Effect

This addition is only effective when a program is overwritten. The statement behaves as if no additions are specified (see above), with the exception that the [ABAP language version](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_version_glosry.htm "Glossary Entry") remains intact in the overwritten program.

Addition 3

... PROGRAM TYPE pt

Effect

This addition specifies the attribute [program type](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_type_glosry.htm "Glossary Entry") for the new or overwritten program in accordance with the setting in pt. pt must be a data object of the data type c and length 1 containing the ID of a program type. The following table shows the case-sensitive IDs of all ABAP program types.

ID

Program Type

1

[Executable program](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexecutable_program_glosry.htm "Glossary Entry")

F

[Function group](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfunction_group_glosry.htm "Glossary Entry") or function pool

I

[Include program](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninclude_program_glosry.htm "Glossary Entry")

J

[Interface pool](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninterface_pool_glosry.htm "Glossary Entry")

K

[Class pool](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclass_pool_glosry.htm "Glossary Entry")

M

[Module pool](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmodul_pool_glosry.htm "Glossary Entry")

S

[Subroutine pool](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensubroutine_pool_glosry.htm "Glossary Entry")

T

[Type group](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentype_group_1_glosry.htm "Glossary Entry") or type pool

Addition 4

... FIXED-POINT ARITHMETIC fp

Effect

This addition specifies the attribute [fixed point arithmetic](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfixed_point_arithmetic_glosry.htm "Glossary Entry") for the new or overwritten program in accordance with the content of fp. fp must be a data object of the data type c and length 1 that has the value "X" or " ". The value "X" sets the fixed point arithmetic attribute, while the value " " deactivates it.

Addition 5

... VERSION vs

Effect

This addition specifies the [ABAP language version](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_versions.htm) for the new or overwritten program in accordance with the content of vs. vs must be a data object of the data type c and length 1. It can have the following values for the version ID:

vs

ABAP language version

Meaning

X

[Standard ABAP (Unicode)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenunicode_program_glosry.htm "Glossary Entry")

Basic version, [Unicode check](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenunicode_check_glosry.htm "Glossary Entry") activated

2

[ABAP for Key Users](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_for_key_users_glosry.htm "Glossary Entry")

Restricted language scope for enhancements by key users

3

[Static ABAP with restricted object use](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_for_cloud_dev_glosry.htm "Glossary Entry")

Restricted use of external [repository objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrepository_object_glosry.htm "Glossary Entry") and dynamic language elements are not permitted

4

[Standard ABAP with restricted object use](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstandard_abap_restr_obj_glosry.htm "Glossary Entry")

Restricted use of external [repository objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrepository_object_glosry.htm "Glossary Entry") and dynamic language elements are permitted

\-

[Obsolete ABAP (non-Unicode)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennon_unicode_program_glosry.htm "Glossary Entry")

Obsolete, [Unicode check](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenunicode_check_glosry.htm "Glossary Entry") deactivated

Technically, the addition supplies the column UCCHECK of database table TRDIR. You should not specify values other than the ones shown here. If incorrect values are specified as a literal and this is known statically, a syntax error occurs. Unknown values, on the other hand, are always saved in the database table TRDIR. Values not contained in the above table act as a version that does not support language elements.

Note

An obsolete addition [UNICODE ENABLING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report_obsolete.htm) has the same significance as VERSION.

Addition 6

... DIRECTORY ENTRY dir

Effect

This addition specifies the [program attributes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_attribute_glosry.htm "Glossary Entry") for the new or overwritten program in accordance with the content of dir. dir must be structure of the data type TRDIR from ABAP Dictionary. The required program attributes can be specified in the components of this structure. Invalid content produces invalid program attributes. All program attributes are obtained from dir, with the exception of the creation and change dates, and the corresponding times, program authors or last changed by attributes, and the version numbers. The latter are set to the same values as if no specification had been made.

Note

When using the addition DIRECTORY ENTRY, it is strongly recommended that the content of structure dir is set only by reading the attributes of an existing program from database table TRDIR, and subsequently making specific changes to individual components.

Example

Switches parts of a program to [Unicode](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenunicode_glosry.htm "Glossary Entry"). A program with the language version [Obsolete ABAP (Non-Unicode)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennon_unicode_program_glosry.htm "Glossary Entry") is imported and the statement DESCRIBE FIELD is switched to the syntax for [Unicode systems](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenunicode_system_glosry.htm "Glossary Entry") as an example. The source code of the program is then overwritten with the modified source code and the [ABAP language version](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_version_glosry.htm "Glossary Entry") is set to [Standard ABAP (Unicode)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenunicode_program_glosry.htm "Glossary Entry").

DATA: itab TYPE TABLE OF string,
      prog TYPE sy-repid,
      uc   TYPE trdir-uccheck.
FIELD-SYMBOLS <line> TYPE string.
prog = ...
SELECT SINGLE uccheck
       FROM trdir
       WHERE name    = @prog AND
             uccheck = ' '
       INTO  (@uc).
IF sy-subrc = 0.
  READ REPORT prog INTO itab.
  LOOP AT itab ASSIGNING <line>.
    TRANSLATE <line> TO UPPER CASE.
    IF <line> CS 'DESCRIBE FIELD' AND
       <line> CS 'LENGTH' AND
       <line> NS 'MODE'.
      REPLACE '.' IN <line> WITH ' IN CHARACTER MODE.'.
    ENDIF.
    ...
  ENDLOOP.
  SYNTAX-CHECK FOR itab ...
  IF sy-subrc = 0.
    INSERT REPORT prog FROM itab VERSION 'X'.
  ENDIF.
ENDIF.

[Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_exceptions.htm)

Handleable Exceptions

CX\_SY\_WRITE\_SRC\_LINE\_TOO\_LONG

-   Cause: A line in the source code contains more than 255 characters.
    Runtime error: INSERT\_REPORT\_LINE\_TOO\_LONG
    

Non-Handleable Exceptions

-   Cause: The program name prog begins with '%\_T'. This prefix is reserved for temporary subroutine pools.
    Runtime error: INSERT\_PROGRAM\_INTERNAL\_NAME
    
-   Cause: The program name prog begins with a blank, which is not permitted.
    Runtime error: INSERT\_PROGRAM\_NAME\_BLANK
    
-   Cause: The program name prog is too long; it can be no more than 40 characters long.
    Runtime error: INSERT\_PROGRAM\_NAME\_TOO\_LONG
    
-   Cause: Suffix 2 in the program name prog is invalid or does not correspond to the specification apptype.
    Runtime error: INSERT\_REPORT\_BAD\_APPENDAGE
    
-   Cause: The specification apptype is invalid. Valid values are defined in the type group SREXT.
    Runtime error: INSERT\_REPORT\_BAD\_APPTYPE
    
-   Cause: Suffix 2 in the program name prog is invalid or does not correspond to the specification exttype.
    Runtime error: INSERT\_REPORT\_BAD\_EXTENSION
    
-   Cause: The specification exttype is invalid. Valid values are defined in the type group SREXT.
    Runtime error: INSERT\_REPORT\_BAD\_EXTTYPE
    
-   Cause: The value of the field uc is not 'X' or ' '.
    Runtime error: INSERT\_REPORT\_ILLEGAL\_FLAG
    
-   Cause: The value of the field pt is not '1', 'I', 'S' , 'M', 'F', 'J', or 'K'. INSERT\_REPORT\_ILLEGAL\_PROGTYPE
    Runtime error: INSERT\_REPORT\_ILLEGAL\_PROGTYPE
    
-   Cause: The program name prog is longer than 30 characters and the program does not yet exist in the library. Without the ... APPENDAGE TYPE apptype addition, the program cannot be inserted.
    Runtime error: INSERT\_REPORT\_NO\_APPTYPE
    
-   Cause: The program name prog is longer than 30 characters and the program does not yet exist in the library. Without the ... EXTENSION TYPE exttype addition, the program cannot be inserted.
    Runtime error: INSERT\_REPORT\_NO\_EXTTYPE
    

Continue
[INSERT REPORT - Internal Additions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report_internal.htm)